# components

./: .gitignore  .gitmodules  CMakeLists.txt  compile.sh  compile_commands.json  run.sh
app/: all_reduce.cpp  components.cpp  debug.cpp  exp_contraction.cpp  labels.cpp  local_contraction.cpp  parse_parameters.h  reduction.cpp  shortcuts.cpp
example/: simple.graph
lib/: config.h  definitions.h
lib/communication/: blocking_communicator.cpp  blocking_communicator.h  comm_utils.h  dynamic_vertex_comm.cpp  dynamic_vertex_comm.h  ghost_communicator.cpp  ghost_communicator.h  node_communicator.cpp  node_communicator.h  payload.h  static_vertex_comm.cpp  static_vertex_comm.h  vertex_comm.cpp  vertex_comm.h  vertex_communicator.cpp  vertex_communicator.h
lib/components/: all_reduce.h  components.h  contraction_reduce.h  exp_contraction.h  exponential_contraction.h  local_contraction.h  propagation.h  reduce_contraction.h  shortcut_propagation.h  utils.h
lib/contraction/: cag_builder.h  dynamic_contraction.h  graph_contraction.h  hierarchy.h  initial_contraction.h
lib/data_structures/: base_graph_access.h  dynamic_graph.h  dynamic_graph_access.cpp  dynamic_graph_access.h  dynamic_graph_comm.cpp  dynamic_graph_comm.h  edge_hash.h  graph_access.cpp  graph_access.h  minimal_graph_access.h  semidynamic_graph.h  semidynamic_graph_comm.cpp  semidynamic_graph_comm.h  static_graph.h  static_graph_access.h  static_graph_comm.cpp  static_graph_comm.h  union_find.h
lib/io/: connect_io.h  graph_io.h  io_utils.h
lib/tools/: arg_parser.h  benchmark.h  macros_assertions.h  macros_common.h  timer.h
